Canvas now is drawn with cropped picture in the correct div

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,6 @@ canvas {
 
 @font-face {
     font-family: 'ocr';
-    src: url('./OCRAEXT.TTF');
+    src: url('../OCRAEXT.TTF');
 }
 
